refactor: replace logger string concatenation with arguments